src/ogatak.css
body {
	background-color: #080808ff;
	color: #efefefff;
	height: 100%;
	margin: 0;
	overflow: hidden;
	padding: 0;
	user-select: none;
	width: 100%;
}

::-webkit-scrollbar {
	pointer-events: auto;
	background-color: #181818ff;
}

::-webkit-scrollbar-thumb {
	pointer-events: auto;
	background-color: #444444ff;
}

/* ----------------------------------------------------------------------------------------------------------------------------------------------- */

#gridder {
	display: none;				/* set to grid by renderer.js, just done like this to hide it until script is active. */
	height: 100vh;
	grid-template-columns: min-content min-content 1fr;
	grid-template-rows: min-content 1fr;
	grid-template-areas:
		"tabs info t_c"
		"tabs b_g  t_c";
}

#gridder_board_graph {
	display: grid;
	grid-area: b_g;
	grid-template-columns: min-content 1fr;
	grid-template-rows: 1fr;
	grid-template-areas:
		"board graph";
}

#gridder_tree_comments {					
	background-color: #111111ff;
	display: grid;
	grid-area: t_c;
	height: 100vh;
	grid-template-columns: 1fr;
	grid-template-rows: min-content 1fr;
	grid-template-areas:
		"tree"
		"comments";
}

/* ----------------------------------------------------------------------------------------------------------------------------------------------- */

#tabdiv {
	grid-area: tabs;
	height: 100vh;
	margin: 0;
	padding: 0;
	overflow-x: hidden;
	overflow-y: scroll;
	pointer-events: auto;
}

/* ----------------------------------------------------------------------------------------------------------------------------------------------- */

#boardinfo {
	grid-area: info;
	color: #e0b872ff;
	font-family: monospace, monospace;
	line-height: 150%;
	white-space: pre;
	margin: 16px 0 0 16px;
}

/* ----------------------------------------------------------------------------------------------------------------------------------------------- */

#boardbg {
	grid-area: board;
	background-color: #d0ad75ff;		/* Matching the board. */
	background-image: url("./gfx/subdued_board.png");
	margin: 16px 0 0 16px;
	z-index: 1;
}

#ownershipcanvas {
	grid-area: board;
	margin: 16px 0 0 16px;
	pointer-events: none;
	z-index: 2;
}

#boardtable {
	grid-area: board;
	border-collapse: collapse;
	margin: 16px 0 0 16px;
	pointer-events: auto;
	z-index: 3;
}

#boardcanvas {
	grid-area: board;
	margin: 16px 0 0 16px;
	pointer-events: none;
	z-index: 4;
}

/* ----------------------------------------------------------------------------------------------------------------------------------------------- */

#graphcanvas {
	grid-area: graph;
	display: block;						/* Stops the parent element from being 4px bigger... */
	margin-left: 0;
	margin-top: 16px;
	z-index: 1;
}

#graphpositioncanvas {
	grid-area: graph;
	display: block;						/* Stops the parent element from being 4px bigger... */
	margin-left: 0;
	margin-top: 16px;
	z-index: 2;
}

/* ----------------------------------------------------------------------------------------------------------------------------------------------- */

#treecanvas {
	grid-area: tree;
	background-color: #111111ff;
	display: block;
	margin: 0 0 0 0;
}

#comments {
	grid-area: comments;
	background-color: #181818ff;
	font-family: monospace, monospace;
	margin: 0;
	overflow-x: hidden;
	overflow-y: auto;
	padding: 0.5em 0.5em 0.5em 0.5em;
	white-space: pre-wrap;
}

/* ----------------------------------------------------------------------------------------------------------------------------------------------- */

#fbox {
	background-color: #080808ff;
	display: none;
	font-family: monospace, monospace;
	font-size: 100%;
	height: 100%;
	left: 0;
	overflow-y: auto;
	pointer-events: auto;
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 6;
}

#fbox_content {
	overflow: hidden;
	padding: 2em;
	white-space: pre;
}

/* ----------------------------------------------------------------------------------------------------------------------------------------------- */

#preloaders {
	display: none;
}

td {
	background-color: transparent;
	background-size: contain;
	border: 0;
	margin: 0;
	padding: 0;
}

.white {
	color: #ffffffff;
}

.blue {
	color: #6ccceeff;
}

.yellow {
	color: #ffff99ff;
}

.green {
	color: #99ff99ff;
}

